examples/failing/NullaryAbs.purs
module Main where

  func = \ -> "no"
